--- a/.woodpecker/build.yml
+++ b/.woodpecker/build.yml
@@ -1,17 +1,18 @@
 branches: main
 pipeline:
     build:
-        image: woodpeckerci/plugin-docker-buildx
+        image: registry.home.estelsmith.com/alpine:3.17
         privileged: true
         volumes:
             - /var/run/docker.sock:/var/run/docker.sock
-        settings:
-            repo: registry.home.estelsmith.com/gotify-docker
-            tags:
-                - latest
-                - 0.0.${CI_BUILD_NUMBER}
-            registry: registry.home.estelsmith.com
-            username:
-                from_secret: registry_username
-            password:
-                from_secret: registry_password
+        secrets:
+            - registry_username
+            - registry_password
+        commands:
+            - apk --no-cache add docker-cli
+            - docker login -u $${REGISTRY_USERNAME} -p $${REGISTRY_PASSWORD} registry.home.estelsmith.com
+            - >
+                docker buildx build .
+                -t registry.home.estelsmith.com/gotify-docker:latest
+                -t registry.home.estelsmith.com/gotify-docker:0.0.${CI_BUILD_NUMBER}
+                --output type=registry
